treesitter/grammar.js
    source_file: $ => itemList($, $._item),

    // Items ----------------------------------------------------------------

    _item: $ => choice(
      $.function_item,
      $.intrinsic_fn_item,
      $.extern_item,
      $.struct_item,
      $.enum_item,
      $.impl_item,
      $.spec_item,
      $.static_item,
      $.const_item,
      $.use_item,
    ),

    function_item: $ => seq(
      optional(field('visibility', $.visibility)),
      optional('unsafe'),
      'fn',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.parameters),
      optional(field('return_type', $.return_type)),
      field('body', $.block),
    ),

    // A signature without a body, terminated by `;` (items.md, "Intrinsic
    // declarations"). The precondition-carrying intrinsics say `unsafe`.
    struct_item: $ => seq(
      optional(field('visibility', $.visibility)),
      'struct',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      $._block_lbrace,
      // A struct with no fields is valid, like an empty block.
      optional(sepByTrailing($.field_declaration, ',')),
      '}',
    ),

    field_declaration: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),

    return_type: $ => seq('->', field('type', $._type)),

    parameters: $ => seq(
      '(',
      optional(sepByTrailing($.parameter, ',')),
      ')',
    ),

    // `comp` marks a compile-time parameter; plain functions use the same
    // shape without it (comp.md).
    parameter: $ => seq(
      optional(field('comp', 'comp')),
      field('pattern', $._pattern),
      ':',
      field('type', $._type),
    ),

    // Types ----------------------------------------------------------------

    _type: $ => choice(
      $.primitive_type,
      $.unit_type,
      $.never_type,
      $.str_type,
      $.tuple_type,
      $.paren_type,
      $.function_type,
      $.array_type,
      $.slice_type,
      $.reference_type,
      $.raw_ptr_type,
      $.path_type,
    ),

    primitive_type: _ => token(choice(
      'i8', 'i16', 'i32', 'i64', 'i128', 'isize',
      'u8', 'u16', 'u32', 'u64', 'u128', 'usize',
      'f32', 'f64', 'bool',
    )),

    str_type: _ => 'str',

    tuple_type: $ => seq(
      '(',
      $._type,
      ',',
      // The comma is what makes the parens a tuple, so `(A,)` is a
      // one-element tuple while `(A)` is `A`; the types after the first
      // comma are optional. Right-associative: a further comma binds to
      // the type that follows it, so this prefix is shared with a
      // function's parameters and a variant's fields until the `)` (or
      // the `->`) says which one it is.
      optional(seq($._type, repeat(prec.right(seq(',', $._type))),
                  optional(','))),
      ')',
    ),

    // A single type in parens is that type; the arrow after the `)` is
    // what makes it a function type instead (grammar.ebnf, "Types").
    raw_ptr_type: $ => seq(
      '*',
      optional('mut'),
      field('type', $._type),
    ),

    path_type: $ => field('path', $.path),

    // A closing `>>` splits into two `>` (grammar.md, "Types"). The lexer
    // gets that for free: a shift operator is not a valid token inside a
    // type argument list, so only `>` is ever considered there.
    type_arguments: $ => seq(
      '<',
      sepByTrailing($._type, ','),
      '>',
    ),

    // Patterns -------------------------------------------------------------

    // `parse_pattern` is a run of primary patterns separated by `|`, and
    // everything else binds tighter than that run. So `&` takes a primary
    // pattern, while a field or a tuple-variant element takes a whole one.
    _pattern: $ => choice(
      $._primary_pattern,
      $.or_pattern,
    ),

    identifier_pattern: $ => prec(1, field('name', choice($.identifier, alias('self', $.self)))),

    _expression: $ => choice(
      $.range_expression,
      $._operand,
    ),

    // A range that names an end says how it is bound, so only `..=` and
    // `..<` may be followed by one, and a bare `..` names an unbounded end
    // (grammar.md, "Lexical notes"). Splitting the rule in two is what
    // keeps `1..2` out while `..<2` and `1..` still read as ranges.
    //
    // A range sits below every binary operator and is never one of their
    // operands, which is why its endpoints are `_operand` rather than an
    // `_expression`: `a || b .. c` is `(a || b) .. c`.
    range_expression: $ => choice(
      seq(
        optional(field('start', $._operand)),
        field('operator', '..'),
      ),
      seq(
        optional(field('start', $._operand)),
        field('operator', choice('..=', '..<')),
        field('end', $._operand),
      ),
    ),

    // Everything a binary operator takes as an operand, and therefore
    // everything except a range. One rule for the whole spine, with the
    // binding power carried per operator, is what keeps `a + b * c` from
    // parsing both ways.
    _operand: $ => choice(
      $.binary_expression,
      $.comparison_expression,
      $.cast_expression,
      $._unary_expression,
    ),

    // A cast takes a unary expression and so takes everything a unary
    // expression bottoms out at, which is the postfix chain: `f() as T`
    // casts the call, not nothing.
    _unary_expression: $ => choice(
      $.unary_expression,
      $.borrow_expression,
      $.deref_expression,
      $._postfix_expression,
    ),

    binary_expression: $ => choice(
      ...[
        [PREC.OR, '||'],
        [PREC.AND, '&&'],
        [PREC.BIT_OR, '|'],
        [PREC.BIT_XOR, '^'],
        [PREC.BIT_AND, '&'],
        [PREC.SHIFT, choice('<<', '>>')],
        [PREC.ADD, choice('+', '-')],
        [PREC.MUL, choice('*', '/', '%')],
      ].map(([precedence, operator]) => prec.left(
        precedence,
        seq(
          field('left', $._operand),
          field('operator', operator),
          field('right', $._operand),
        ),
      )),
      // `**` is right-associative: `a ** b ** c` is `a ** (b ** c)`.
      prec.right(PREC.POW, seq(
        field('left', $._operand),
        field('operator', alias($._pow_operator, '**')),
        field('right', $._operand),
      )),
    ),

    // The power operator is two stars with the second one immediate
    // rather than a `**` token. A state that expects an operand has no
    // power, so `**p` and `**T` read as a pair of stars there, while
    // `a * *b` stays a multiplication of a dereference and `a **b` is
    // the power (grammar.md, "Expressions"). The alias keeps `**` a
    // single operator node, the way every other binary operator is.
    _pow_operator: $ => seq('*', token.immediate('*')),

    comparison_expression: $ => prec.left(PREC.COMPARISON, seq(
      field('left', $._operand),
      field('operator', choice('==', '!=', '>', '<', '>=', '<=')),
      field('right', $._operand),
    )),

    cast_expression: $ => prec.left(PREC.CAST, seq(
      field('value', $._unary_expression),
      'as',
      field('type', $._type),
    )),

    unary_expression: $ => prec.left(PREC.UNARY, seq(
      field('operator', choice('-', '!', '~')),
      field('argument', $._unary_expression),
    )),

    borrow_expression: $ => prec.left(PREC.UNARY, seq(
      '&',
      optional('mut'),
      field('value', $._unary_expression),
    )),

    deref_expression: $ => prec.left(PREC.UNARY, seq(
      '*',
      field('value', $._unary_expression),
    )),

    call_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('function', postfixOperand($)),
      field('arguments', $.arguments),
    )),

    field_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('object', postfixOperand($)),
      '.',
      field('field', choice($.identifier, $.integer)),
    )),

    index_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('object', postfixOperand($)),
      '[',
      field('index', $._expression),
      ']',
    )),

    try_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('value', postfixOperand($)),
      '?',
    )),

    arguments: $ => seq(
      '(',
      optional(sepByTrailing($._expression, ',')),
      ')',
    ),

    path_expression: $ => field('path', $.path),

    // A brace after a path continues the expression rather than ending the
    // statement it sits in, so this binds like the postfix operators it sits
    // among. Without that, `p := Point { x: 1 }` reads as a declaration of
    // `p` followed by a block-valued statement.
    struct_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('path', $.path),
      '{',
      sepByTrailing($.field_initializer, ','),
      // `..base` move-update.
      optional(seq('..', field('base', $._expression))),
      '}',
    )),

    field_initializer: $ => seq(
      field('name', $.identifier),
      ':',
      field('value', $._expression),
    ),

    unit_expression: _ => seq('(', ')'),

    tuple_expression: $ => seq(
      '(',
      $._expression,
      // A tuple of one is written with its separator: `(n,)`.
      ',',
      optional(sepByTrailing($._expression, ',')),
      optional(','),
      ')',
    ),

    array_expression: $ => seq(
      '[',
      sepByTrailing($._expression, ','),
      ']',
    ),

    repeat_expression: $ => seq(
      '[',
      field('value', $._expression),
      ';',
      field('length', $.integer),
      ']',
    ),

    // Parentheses lift the ban a condition or a range end places on a
    // struct literal (grammar.md, "Expressions").
    parenthesized_expression: $ => seq('(', $._expression, ')'),

    // A closure is an anonymous function: `(params) -> body`, with an
    // optional capture list naming the locals it sees. A bare parameter
    // list captures nothing, and `[]` says the same thing explicitly
    // (grammar.ebnf, "Expressions"). `mut` and `_` mirror declaration
    // patterns, and a parameter's type is optional.
    unsafe_block: $ => seq('unsafe', $.block),

    // Right-associative so that `ret (a)` reads the parenthesized
    // expression as the returned value rather than as a bare `ret`
    // followed by something the statement cannot start with.
    return_expression: $ => prec.right(seq(
      'ret',
      optional(field('value', $._expression)),
    )),

    block: $ => seq(
      $._block_lbrace,
      optional(blockBody($)),
      '}',
    ),

    declaration_statement: $ => seq(
      optional(field('comp', 'comp')),
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      ':=',
      field('value', $._expression),
    ),

    // The parser reads the left side as an ordinary expression and leaves
    // the question of whether it names a place to the checker, so the
    // grammar does not restrict it either.
    expression_statement: $ => prec.dynamic(-1, seq(
      field('expression', $._expression),
      $._terminator,
    )),

    // A statement ends at a `;` or at the newline the lexer inserts. A
    // `match` arm accepts a run of `,` and `;` as its separator.
    _terminator: $ => choice(';', $._newline),
    path: $ => seq(
      field('segment', $._path_segment),
      optional(field('type_arguments', $.type_arguments)),
      repeat(seq('::', choice(
        seq(
          field('segment', $._path_segment),
          optional(field('type_arguments', $.type_arguments)),
        ),
        field('type_arguments', $.type_arguments),
      ))),
    ),

    _path_segment: $ => choice(
      alias('package', $.package),
      alias('self', $.self),
      alias('super', $.super),
      alias('Self', $.self_type),
      $.identifier,
    ),

    // Literals -------------------------------------------------------------

    // `_` alone is the wildcard token and `_foo` is an identifier, which
    // is the same split the lexer makes: a leading underscore starts an
    // identifier unless nothing follows it.
    identifier: _ => /[A-Za-z][A-Za-z0-9_]*|_[A-Za-z0-9_]+/,

    boolean: _ => choice('true', 'false'),

    // A `.` starts a fraction only when it is not the start of `..`, which
    // is what keeps `1..<2` a range and not a float. The fraction needs a
    // digit after the `.` for the same reason: `1..` must not reach for the
    // second `.`.
    integer: _ => token(choice(
      seq(/0[bB]/, repeat1(choice(/[01]/, '_')), optional(SUFFIX)),
      seq(/0[oO]/, repeat1(choice(/[0-7]/, '_')), optional(SUFFIX)),
      seq(/0[xX]/, repeat1(choice(HEX_DIGIT, '_')), optional(SUFFIX)),
      seq(
        repeat1(DECIMAL_DIGIT),
        optional(choice(
          seq('.', repeat1(DECIMAL_DIGIT)),
          seq(/[eE]/, optional(/[+-]/), repeat1(DECIMAL_DIGIT)),
        )),
        optional(SUFFIX),
      ),
    )),

    float: _ => token(seq(
      repeat1(DECIMAL_DIGIT),
      '.',
      repeat1(DECIMAL_DIGIT),
      optional(seq(/[eE]/, optional(/[+-]/), repeat1(DECIMAL_DIGIT))),
      optional(SUFFIX),
    )),

    string: $ => token(seq(
      '"',
      repeat(choice(
        /[^"\\\n]/,
        seq('\\', choice(
          /[ntr\\"']/,
          '0',
          seq('u', '{', repeat1(HEX_DIGIT), '}'),
        )),
      )),
      '"',
    )),

    char: $ => token(seq(
      "'",
      choice(
        /[^'\\\n]/,
        seq('\\', choice(/[ntr\\"']/, '0', seq('u', '{', repeat1(HEX_DIGIT), '}'))),
      ),
      "'",
    )),

    // Comments -------------------------------------------------------------
